--- a/correspondence/2008-10-31.md
+++ b/correspondence/2008-10-31.md
@@ -5,3 +5,10 @@ Bitcoiners are apt to tell a newbie to 'read the whitepaper.' But for this chapt
 You can find the entire whitepaper online in a litany of places. A link to the whitepaper is available at the chapter-cloisng QR which you will see at the end of each chapter in this book.
 
 The original whitepaper is spread across PDF 9 pages.
+
+* this unordered seed list will be replaced by the toc
+{:toc}
+
+## SOURCES
+
+[https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html](https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html)
