--- a/correspondence/2008-10-31.md
+++ b/correspondence/2008-10-31.md
@@ -1,3 +1,8 @@
+* this unordered seed list will be replaced by the toc
+{:toc}
+
+## INTRODUCTION
+
 The Bitcoin whitepaper is a nine page document, in the style of an academic paper, that outlines the technical details and theoretical underpinnings of a peer-to-peer electronic cash system called Bitcoin.
 
 Bitcoiners are apt to tell a newbie to 'read the whitepaper.' But for this chapter we will be pulling a small selection of quotes from the pape to give the reader a general sense of that which was presented in the bitcoin whitepaper.
@@ -6,9 +11,8 @@ You can find the entire whitepaper online in a litany of places. A link to the w
 
 The original whitepaper is spread across PDF 9 pages.
 
-* this unordered seed list will be replaced by the toc
-{:toc}
-
 ## SOURCES
 
 [https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html](https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html)
+
+## GITHUB ENABLED COMMENTS
