--- a/correspondence/2008-10-31.md
+++ b/correspondence/2008-10-31.md
@@ -3,16 +3,10 @@
 
 ## INTRODUCTION
 
-The Bitcoin whitepaper is a nine page document, in the style of an academic paper, that outlines the technical details and theoretical underpinnings of a peer-to-peer electronic cash system called Bitcoin.
+On halloween IN 2008, a man going by Satoshi Nakamoto INtroduced his Bitcoin whitepaper that debuted his concept of a decentralized digital cash system and outlined the technical details of how such a thing could be created and maintained.
 
-Bitcoiners are apt to tell a newbie to 'read the whitepaper.' But for this chapter we will be pulling a small selection of quotes from the pape to give the reader a general sense of that which was presented in the bitcoin whitepaper.
-
-You can find the entire whitepaper online in a litany of places. A link to the whitepaper is available at the chapter-cloisng QR which you will see at the end of each chapter in this book.
-
-The original whitepaper is spread across PDF 9 pages.
+The following email, sent on Octer 3ist, 2008 at 18:00:00 UTC (coordinated universal time) is the first the world hears from Satoshi Nakamoto publicly. It took place on the metzdowd cryptography mailing list. He gave his email the subject heading of 'Bitcoin P2P e-cash paper.' Linked from this email was the referenced Bitcoin Whitepaper. This email would spark converstaion on the mailing list. Another seventeen emails like this one, and an additional thirty-seven source code files are contained within this book.
 
 ## SOURCES
 
 [https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html](https://www.metzdowd.com/pipermail/cryptography/2008-October/014810.html)
-
-## GITHUB ENABLED COMMENTS
