--- a/correspondence/2008-11-03-AM.md
+++ b/correspondence/2008-11-03-AM.md
@@ -1,3 +1,8 @@
+* this unordered seed list will be replaced by the toc
+{:toc}
+
+## INTRODUCTION
+
 In the early Metzdowd emails, Satoshi Nakamoto, the creator of Bitcoin, explained how Simplified Payment Verification (SPV) works and how it prevents double spending attacks.
 
 SPV is a technique that allows Bitcoin clients to verify transactions without downloading the entire blockchain. Instead, an SPV client only downloads the block headers, which contain the proof-of-work for each block, and uses them to verify that a transaction has been included in a valid block. This makes SPV clients much lighter and faster than full nodes, which download and store the entire blockchain.
@@ -7,3 +12,5 @@ Satoshi explained that the security of the SPV technique comes from the fact tha
 Satoshi also noted that SPV clients can be more vulnerable to double spending attacks than full nodes because they rely on other nodes to provide them with accurate information. However, he argued that the risk of such attacks could be mitigated by using multiple sources of information and by waiting for a certain number of confirmations before considering a transaction as final.
 
 It also demonstrated the trade-offs involved in optimizing the balance between security and scalability in a decentralized network.
+
+## SOURCES
