--- a/correspondence/2008-11-03-AM.md
+++ b/correspondence/2008-11-03-AM.md
@@ -1,16 +1,7 @@
-* this unordered seed list will be replaced by the toc
-{:toc}
+In the early days of Bitcoin, questions about the scalability of the system were already being raised. In response to such concerns, Satoshi Nakamoto introduced the concept of Simplified Payment Verification (SPV) in an email to the metzdowd Cryptography Mailing List.
 
-## INTRODUCTION
+SPV, detailed in section 8 of the Bitcoin whitepaper, is a method that allows a user to verify if a particular transaction is included in a block without downloading the entire blockchain. Instead, the user only needs to keep a copy of all block headers, significantly reducing the storage and bandwidth requirements.
 
-In the early Metzdowd emails, Satoshi Nakamoto, the creator of Bitcoin, explained how Simplified Payment Verification (SPV) works and how it prevents double spending attacks.
+In the email, Nakamoto explains that SPV would become more relevant as the network grows. He suggests that while initially, most users would run full network nodes, as the network expands, maintaining a full node would be left to specialists with server farms of specialized hardware.
 
-SPV is a technique that allows Bitcoin clients to verify transactions without downloading the entire blockchain. Instead, an SPV client only downloads the block headers, which contain the proof-of-work for each block, and uses them to verify that a transaction has been included in a valid block. This makes SPV clients much lighter and faster than full nodes, which download and store the entire blockchain.
-
-Satoshi explained that the security of the SPV technique comes from the fact that it assumes that a majority of the mining power is honest. In other words, as long as most of the miners are following the rules of the network, SPV clients can trust the information they receive from them. If an attacker were to try to double spend by creating a fake transaction, the SPV client would not be able to verify it because the fake transaction would not be included in a valid block.
-
-Satoshi also noted that SPV clients can be more vulnerable to double spending attacks than full nodes because they rely on other nodes to provide them with accurate information. However, he argued that the risk of such attacks could be mitigated by using multiple sources of information and by waiting for a certain number of confirmations before considering a transaction as final.
-
-It also demonstrated the trade-offs involved in optimizing the balance between security and scalability in a decentralized network.
-
-## SOURCES
+This email is a testament to Nakamoto's foresight and his commitment to making Bitcoin a scalable and accessible system. It highlights the innovative solutions that were proposed to ensure that Bitcoin could grow and accommodate an increasing number of transactions.
