--- a/correspondence/2008-11-06.md
+++ b/correspondence/2008-11-06.md
@@ -1,3 +1,5 @@
-In this conversation, the speaker is discussing the idea behind the security of the Bitcoin network. They mention that as long as the "honest nodes" (meaning those who use their computational power to verify transactions and secure the network) collectively have more CPU power than any single attacker, the network should remain secure. 
+In the early days of Bitcoin, Satoshi Nakamoto found himself in a dialogue with skeptics and enthusiasts alike. One such conversation took place on the metzdowd Cryptography Mailing List, where Nakamoto addressed the role of cryptography in political problems. 
 
-However, the speaker notes that there are many large-scale zombie farms (networks of compromised computers) that could potentially overpower the network. They suggest that the solution to this problem is for more smaller farms to generate bitcoins, which would make it harder for any single attacker to overpower the network. The speaker also notes that even if an attacker were to overpower the network, it wouldn't necessarily make them rich, as they would only be able to take back money they had previously spent. Finally, the speaker suggests that the Bitcoin network could potentially reduce spam by diverting zombie farms to generate bitcoins instead.
+In his response, Nakamoto acknowledged that while cryptography may not provide a solution to political problems, it can "win a major battle in the arms race and gain a new territory of freedom for several years." He further argued that governments are effective at cutting off the heads of centrally controlled networks, but pure peer-to-peer networks like Gnutella and Tor seem to be holding their own.
+
+This email showcases Nakamoto's belief in the resilience of decentralized systems and the potential for technology to carve out spaces of freedom. It provides a glimpse into the philosophical underpinnings of Bitcoin and the vision that guided its creation.
