--- a/correspondence/2008-11-08.md
+++ b/correspondence/2008-11-08.md
@@ -1,7 +1,5 @@
-While it is true that the proof-of-work difficulty is adjusted to keep the average block creation rate at a target value, this does not necessarily mean that the currency inflation rate is tied to hardware speed.
+In the early days of Bitcoin, Satoshi Nakamoto found himself in a conversation that took place on the metzdowd Cryptography Mailing List, where Nakamoto addressed concerns about the inflationary nature of Bitcoin due to increasing hardware speed.
 
-The rate of new bitcoin production decreases over time due to the halving event that occurs approximately every four years, which reduces the block reward in half. In the beginning, the reward was 50 bitcoins, and it is currently 6.25 bitcoins per block. This halving event reduces the new supply of bitcoins that are produced, which slows down the rate of currency inflation.
+In his response, Nakamoto clarified that the Bitcoin system is designed to adjust the difficulty of the proof-of-work algorithm based on the total computing power of the network. This adjustment ensures that the rate of block creation remains constant, regardless of increases in hardware speed. He further explained that the creation of new coins does not necessarily result in inflation, as the value of the coins would depend on the rate of increase in demand relative to supply.
 
-Furthermore, the rate of currency inflation is affected by other factors such as adoption rate, usage patterns, and economic activity. The value of a currency is ultimately determined by supply and demand, and its purchasing power can increase or decrease depending on these factors.
-
-Therefore, while hardware speed can affect the difficulty adjustment and block creation rate, it is not the sole determinant of the currency inflation rate, which is influenced by multiple factors.
+This email showcases Nakamoto's understanding of economic principles and his ability to design a system that balances the creation of new coins with the demand for them. It provides a glimpse into the thought process behind the creation of Bitcoin and the innovative solutions that were employed to ensure its stability and sustainability.
