--- a/correspondence/2008-11-09-AM1.md
+++ b/correspondence/2008-11-09-AM1.md
@@ -1,5 +1,7 @@
-This text is a conversation between Hal Finney and Satoshi Nakamoto discussing various aspects of the Bitcoin protocol.
+In this email exchange on the metzdowd Cryptography Mailing List, Satoshi Nakamoto addresses the issue of double spending in the Bitcoin system. Double spending is a potential flaw in a digital cash system where a user can spend the same coins more than once.
 
-Hal is asking questions about how transactions propagate through the network and how double-spending is prevented. Satoshi explains that nodes keep transactions in their working set until they get into a block, and if a transaction reaches 90% of nodes, then it has a 90% chance of being in the next block. He also explains how double-spending is prevented by the longest chain always being considered the valid one, and how an attacker with more computing power would have to rewrite history to create a new valid chain.
+Nakamoto explains that nodes keep transactions in their working set until they get into a block. If a transaction reaches 90% of nodes, then each time a new block is found, it has a 90% chance of being in it. He further explains that if someone tries to double spend, one and only one spend will always become valid, the others invalid.
 
-Satoshi also explains that the recipient of a coin only needs to verify it back to a depth that is sufficiently far back in the block chain, and that nodes check transactions to make sure they depend on valid transactions in previous blocks. Finally, Hal suggests a more process-oriented description of the idea, which Satoshi acknowledges but explains that he wrote the code before he could write a detailed specification.
+He also clarifies that an attacker who has more computing power than all the honest participants can't simply add blocks to the end. The attacker has to go back and redo the block his transaction is in and all the blocks after it, as well as any new blocks the network keeps adding to the end while he's doing that. He's rewriting history. Once his branch is longer, it becomes the new valid one.
+
+This email provides a deep insight into the mechanisms that Nakamoto designed to prevent double spending in the Bitcoin system. It showcases the robustness of the Bitcoin protocol and Nakamoto's deep understanding of the potential vulnerabilities in a digital cash system.
