--- a/correspondence/2008-11-09-AM2.md
+++ b/correspondence/2008-11-09-AM2.md
@@ -1,9 +1,7 @@
-The Proof-of-Work Chain is essential in Achieving Consensus in a Decentralized System.
+In this email exchange on the metzdowd Cryptography Mailing List, Satoshi Nakamoto addresses the issue of achieving consensus in the Bitcoin system. Consensus is a critical aspect of any decentralized system, ensuring that all participants agree on the state of the shared ledger.
 
-In this chapter, we explore the critical role of the proof-of-work chain in achieving consensus in a decentralized system like Bitcoin. We begin by addressing the concerns raised by James A. Donald regarding the synchronization problem and maintaining consistency in a system where multiple entities keep track of ownership of bitcoins.
+Nakamoto explains that the proof-of-work chain is the solution to the synchronization problem and to knowing what the globally shared view is without having to trust anyone. He describes how transactions propagate throughout the network, with nodes accepting the first version of a transaction they see and refusing subsequent ones. Nodes then "vote" for their viewpoint of which transaction they saw first by including it in their proof-of-work effort.
 
-We then explain how the proof-of-work chain serves as a consensus mechanism that allows the network to agree on the order and validity of transactions. Nodes in the network vote for the transaction they saw first by including it in their proof-of-work effort, and the first transaction to reach the majority of the network becomes the valid one.
+He further explains that when a node finds a proof-of-work, the new block is propagated throughout the network and everyone adds it to the chain. Any nodes that had the other transaction will stop trying to include it in a block, since it's now invalid according to the accepted chain.
 
-Moreover, the proof-of-work chain serves as self-evident proof that it came from the globally shared view, as only the majority of the network together has enough CPU power to generate such a difficult chain of proof-of-work.
-
-Overall, this chapter highlights the critical role of the proof-of-work chain in achieving consensus and maintaining the consistency of the blockchain in a decentralized system like Bitcoin.
+This email provides a deep insight into the mechanisms that Nakamoto designed to achieve consensus in the Bitcoin system. It showcases the robustness of the Bitcoin protocol and Nakamoto's deep understanding of the challenges inherent in a decentralized system.
