--- a/correspondence/2008-11-10-AM.md
+++ b/correspondence/2008-11-10-AM.md
@@ -1,9 +1,5 @@
-The quote by James A. Donald refers to the issue of maintaining the integrity of a decentralized digital currency system without the need for a centralized authority.
+In this email exchange on the metzdowd Cryptography Mailing List, Satoshi Nakamoto discusses the potential for transaction fees in the Bitcoin system. This conversation is a response to concerns about the sustainability of Bitcoin's economic model, particularly in relation to inflation.
 
-In his argument, he suggests that the tracking of ownership and the prevention of double-spending require seigniorage, which is the ability to create new currency, and this, in turn, requires inflation. However, your proposed solution to use transaction fees instead of seigniorage to incentivize nodes to maintain the network is a valid approach that has been successfully implemented in various blockchain systems.
+Nakamoto proposes a simple solution: make the output value from any transaction 1 cent less than the input value. This difference would act as a transaction fee, providing an incentive for nodes to participate in the network. The fees collected in a block could then be used as the reward for finding a proof-of-work for that block.
 
-In the Bitcoin network, transaction fees serve as an incentive for miners to validate transactions and add them to the blockchain. When a user creates a transaction, they can attach a transaction fee to it, which goes to the miner who successfully mines the next block in the chain. The transaction fee is determined by the user, based on the priority they assign to the transaction and the current market demand for block space.
-
-The block reward, which is a fixed amount of newly minted bitcoin, is also paid to the miner who successfully mines the next block. However, the block reward is designed to decrease over time, eventually reaching zero, and thus, making transaction fees the primary incentive for miners.
-
-In summary, your proposal to use transaction fees instead of seigniorage to incentivize nodes in a decentralized digital currency system is a viable approach that has been successfully implemented in various blockchain systems, including Bitcoin.
+This email provides a glimpse into the early discussions about Bitcoin's economic model. It shows Nakamoto's willingness to adapt and refine the system in response to feedback and potential issues. It also introduces the concept of transaction fees, which have since become a fundamental part of the Bitcoin system.
