--- a/correspondence/2008-11-13.md
+++ b/correspondence/2008-11-13.md
@@ -1,3 +1,6 @@
-Yes, the proof-of-work chain is a solution to the Byzantine Generals' Problem in the context of distributed data processing. In this scenario, the Byzantine Generals use the proof-of-work chain to reach consensus on the attack time and ensure that the majority of the generals are attacking at the same time.
+In this email, Satoshi Nakamoto explains how Bitcoin's proof-of-work chain provides a solution to the Byzantine Generals' Problem, a classic issue in distributed computing systems.
+The problem involves a group of generals, each commanding a portion of the Byzantine army, who must coordinate an attack by passing orders through messengers. The challenge is that some generals may be traitors and may send false messages. The question is how to ensure that loyal generals can agree on a common battle plan despite these unreliable messages.
 
-By using a proof-of-work chain, they can establish a distributed database that everyone can agree on, and they can verify that enough CPU power has been expended to ensure the security of their attack. The proof-of-work chain solves the problem of distributed data processing by providing a means for achieving consensus among multiple parties that do not necessarily trust each other. It is also used in other contexts, such as in cryptocurrencies like Bitcoin, to achieve consensus on the state of the ledger.
+Nakamoto uses an analogy of generals trying to crack a password to attack a King's Wi-Fi network. The generals must agree on an attack time, but the network is not instantaneous, and different generals might hear different times first. To solve this, they use a proof-of-work chain. Each general works on a difficult problem that includes the attack time in its hash. When a general finds a solution, he broadcasts it, and everyone else adjusts their work to include this solution. The longest proof-of-work chain becomes the agreed attack time.
+
+This email is a clear demonstration of how Bitcoin's proof-of-work chain can solve complex issues in distributed systems. It shows how the technology can create a consensus among nodes, even in an environment where information may not be reliable or instantaneous. This is a fundamental aspect of Bitcoin's security and decentralization.
