--- a/correspondence/2008-11-15-AM.md
+++ b/correspondence/2008-11-15-AM.md
@@ -1,7 +1,5 @@
-Hal Finney and Satoshi Nakamoto were two of the early contributors to the development of Bitcoin. Their ideas and insights were instrumental in shaping the design and functionality of the cryptocurrency network.
+In this email, Satoshi Nakamoto responds to a series of technical queries about the Bitcoin system. He clarifies misunderstandings and provides further insight into the mechanisms of Bitcoin.
 
-In this conversation, Hal Finney proposed an optimization for managing the pending transactions list associated with candidate chains in the Bitcoin network. He suggested that nodes should only keep a separate pending transaction pool for the current best branch, and that candidate branches should not be a burden unless they become the main chain.
+Nakamoto explains the transaction process, emphasizing that only the buyer signs a transaction and there's no blinding involved. He also clarifies that Bitcoin doesn't rely on identities or recourse, but on prevention of double-spending. He further explains the role of the proof-of-work chain in resolving conflicts between two competing chains, each containing a different version of the same transaction.
 
-Satoshi Nakamoto agreed with this optimization and also addressed concerns about the reliability and speed of network broadcasts. He noted that broadcasts were expected to be almost completely reliable and that if they turned out to be slower than expected, the target time between blocks may have to be increased.
-
-Finally, they discussed the potential for Bitcoin to be socially useful and valuable, and speculated that simple altruism could suffice to keep the network running properly if node operators felt that they were making a beneficial contribution to the world.
+Nakamoto also addresses the concern about the domination of the fastest nodes in the network, explaining that the proof-of-work is a memoryless process, and the chance of finding a solution at any time is proportional to a node's CPU power. He also mentions that nodes will be incentivized to include all transactions they can due to transaction fees.
