--- a/correspondence/2008-11-15-PM.md
+++ b/correspondence/2008-11-15-PM.md
@@ -1,3 +1,7 @@
-In this exchange, an anonymous figure believed to be the pseudonymous creator of Bitcoin, Satoshi Nakamoto, discusses the challenges and potential solutions for the pseudonymous and decentralized nature of Bitcoin transactions.
+In this email, Satoshi Nakamoto addresses concerns about the potential for double-spending in Bitcoin transactions. He explains the mechanism of transaction propagation across the network and how it mitigates the risk of double-spending.
 
-The conversation touches on the use of asymmetric key pairs, the role of CPU power in establishing credibility, the risk of double-spending, and potential solutions for merchants to mitigate this risk. While the conversation took place in the early days of Bitcoin, the issues and potential solutions discussed continue to be relevant to this day as the cryptocurrency landscape continues to evolve.
+Nakamoto emphasizes that the race is to spread your transaction on the network first. The transaction spreads exponentially, and within a couple of minutes, it would have reached enough nodes that a late competitor would have little chance of overtaking the network. During this time, the merchant's nodes can be watching for a double-spent transaction.
+
+He also discusses the concept of zero-confirmation transactions, where a transaction is considered valid before it is included in a block. Nakamoto suggests that for most applications, the risk of a double-spend attack is minimal due to the rapid propagation of transactions across the network.
+
+This email provides a deeper understanding of the mechanisms that protect the integrity of Bitcoin transactions. It showcases Nakamoto's foresight in anticipating potential issues and his commitment to ensuring the robustness of the Bitcoin system.
