--- a/correspondence/2008-11-09-PM.md
+++ b/correspondence/2008-11-09-PM.md
@@ -1,7 +1,7 @@
-The market.h file in the Bitcoin v0.01 Alpha codebase is a header file that contains declarations for the classes and functions used in the market.cpp file. This file is a part of the early Bitcoin codebase that was intended for a marketplace feature.
+In this email exchange on the metzdowd Cryptography Mailing List, Satoshi Nakamoto explains the concept of orphan blocks in the Bitcoin system. Orphan blocks occur when two miners solve a block at nearly the same time, causing a temporary fork in the blockchain.
 
-The file declares three classes: CUser, CReview, and CProduct. The CUser class represents a user in the marketplace, the CReview class represents a review of a product, and the CProduct class represents a product that can be advertised in the marketplace.
+In this email exchange on the metzdowd cryptography mailing list, Satoshi Nakamoto explains the concept of orphan blocks in the Bitcoin system. Orphan blocks occur when two miners solve a block at nearly the same time, causing a temporary fork in the blockchain.
 
-The file also declares a number of functions, including AdvertInsert(), AdvertErase(), and AddAtomsAndPropagate(), which are used to manage advertisements and propagate atoms to other users.
+Nakamoto explains that when two blocks are broadcast at the same time, nodes keep both but only work on the one they received first. The tie is broken when the next block is found, as the branch that node was working on becomes the longer one. Regardless of which side it is, the new block will contain the transactions missing from their side, ensuring that all transactions are included.
 
-This file provides a glimpse into the early ideas and features that were considered during the development of Bitcoin. It's a testament to the iterative nature of software development, where ideas are tested, refined, and sometimes discarded as the project evolves.
+He further clarifies that it's not a problem if transactions have to wait one or a few extra cycles to get into a block. This email provides a deep insight into the mechanisms that Nakamoto designed to handle orphan blocks in the Bitcoin system.
